syntax = "proto3";

service VotingService {
    rpc GetVoterList (VoterListRequest) returns (VoterListResponse);
    rpc GetPartyList (PartyListRequest) returns (PartyListResponse);
}

message VoterListRequest {}
message VoterListResponse {
    repeated string voters = 1;
}
message PartyListRequest {}
message PartyListResponse {
    repeated string parties = 1;
}
